--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
+              
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
@@ -35,6 +36,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
